# alphacent

./: .gitignore  AUDIT_FIX_TRACKER.md  AUDIT_PROMPT.md  AUDIT_REPORT_2026-05-01.md  AUDIT_REPORT_2026-05-02.md  AUDIT_REPORT_2026-06-27.md  CRYPTO_PIPELINE_AUDIT_2026-06-20.md  DATA_PIPELINE_AUDIT_PROMPT.md  FRONTEND_REBUILD_SPEC.md  INTEL_SPEC.md  INVESTIGATION_2026-05-03.md  REGIME_DORMANCY_DESIGN_2026-06-30.md  SESSION_CONTINUATION_PROMPT.md  SESSION_CONTINUATION_PROMPT_V9.md  STRATEGY_LIBRARY_REVIEW_2026-05.md  Session_Continuation.md  cancel_all_orders.py  check_all_etoro_positions.py  check_duplicate_orders.py  check_etoro_positions.py  check_orders.py  cleanup_all_positions.py  cleanup_database.py  count_orders.py  cycle_test_authenticated.txt  cycle_test_output.txt  delete_failed_orders.py  delete_filled_orders.py  fix_risk_config.py  fix_watchlist.html  mark_orders_filled.py  package-lock.json  package.json  pyproject.toml  pytest.ini  query_xlu_positions.py  requirements.txt  reset_admin_user.py  restart_backend.sh  restart_server.sh  (+18 more)
config/: .disabled_templates.json  .market_stats_cache.json  .proposal_tracker.json  .rejection_blacklist.json  .wf_failed_cache.json  .wf_validated_combos.json  .zero_trade_blacklist.json  autonomous_trading.yaml  risk_config.json  symbols.yaml
deploy/: README.md  aws-setup.sh  cloudwatch-iam-policy.sh  cloudwatch-setup.sh  heartbeat.sh  migrate-data.sh  nginx-alphacent.conf  patch-api-keys.sh  server-config.sh
docs/: ALPHACENT_OVERVIEW.md  ALPHACENT_SYSTEM_AUDIT_2026-05.md  ALPHA_EDGE_PIPELINE_AUDIT.md  GAP_ANALYSIS_2026-05.md  (+20 more)
(+1602 files in other folders)
